# ai-imessage

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: recommended-path.md  releasing.md
scripts/: release.sh
src/: appledate.rs  chunk.rs  cli.rs  config.rs  contacts.rs  doctor.rs  dryrun.rs  embed.rs  etl.rs  extract.rs  handles.rs  index.rs  lib.rs  main.rs  mcp.rs  model.rs  paths.rs  retrieve.rs  service.rs  tailnet.rs  typedstream.rs
tests/: cli_end_to_end.rs  contacts_names.rs  doctor_checks.rs  dryrun_report.rs  embeddings.rs  etl_sync.rs  extraction.rs  extraction_legacy.rs  mcp_http.rs  mcp_server.rs
tests/common/: mod.rs
