[package]
name = "ai-imessage"
version = "0.1.0"
edition = "2024"
description = "Local-first Apple Messages RAG index and MCP server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timwilliams/ai-imessage"
keywords = ["imessage", "mcp", "rag", "macos", "search"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.4", features = ["derive"] }
dirs = "6.0.0"
# Pinned to 0.37: libsqlite3-sys 0.38+ needs a newer rustc than 1.88
# (cfg_select!). Bump after `rustup update` works (requires fixing
# root-owned ~/.rustup: sudo chown -R $USER ~/.rustup).
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.19"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
